<resources>
    <string name="app_name">Currency Converter</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginBtn">Login</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="oman">Oman</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="nextBtn">Next</string>
    <string name="welcome_to_currency_converter">Welcome to Currency Converter</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="next">Next</string>
    <string name="omanBtn">oman</string>
    <string name="OmanBtn">Oman</string>
    <string name="saudi_arabiaBtn">Saudi Arabia</string>
    <string name="oman1">Oman</string>
    <string name="saudi_arabia1">Saudi Arabia</string>
    <string name="button">Button</string>
    <string name="saudi_arabia4">SAUDI ARABIA</string>
    <string name="enter_number">Enter Number</string>
    <string name="image">TODO</string>
    <string name="enter">Enter</string>
    <string name="oman5">OMAN</string>
    <string name="enter_number1">Enter Number</string>
    <string name="enter1">Enter</string>
    <string name="image2">TODO</string>
    <string name="image3">TODO</string>
    <string name="IMAGE4">TODO</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="enter3">Enter</string>
</resources>